--- a/12Watch.html
+++ b/12Watch.html
@@ -32,7 +32,14 @@
         </div>
         <div class="image">
             <div id="avtar">
-               
+              <img id="pic1" src="profile pic1.jpeg">
+              <img id="pic2" src="profile pic2.jpeg">
+              <img id="pic3" src="profile pic3.jpeg">
+              <div id="box1"><p>10K</p></div>
+               <img id="pic4" src="watch.jpeg">
+
+
+
             </div>
         </div>
 
