--- a/12Watch.html
+++ b/12Watch.html
@@ -5,6 +5,7 @@
             This website is about Watch
         </title>
         <link rel="stylesheet" href="12Watch.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6TaYFAeBU/SyuyvJ+xPyaWRsXkGC/HgyC6hNyZXZcNxNzg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <div class="naavbar">
@@ -32,13 +33,20 @@
         </div>
         <div class="image">
             <div id="avtar">
-              <img id="pic1" src="profile pic1.jpeg">
+                <img src="watch.jpeg">
+              <!--<img id="pic1" src="profile pic1.jpeg">
               <img id="pic2" src="profile pic2.jpeg">
               <img id="pic3" src="profile pic3.jpeg">
               <div id="box1"><p>10K</p></div>
                <img id="pic4" src="watch.jpeg">
 
 
+
+            </div>
+        </div>
+        <div class="footer">
+            <p id="ptwo">Crafted for the Moments that Matter.</p>
+            <div id="line">
 
             </div>
         </div>
