--- a/1size+color.html
+++ b/1size+color.html
@@ -4,7 +4,7 @@
         <title>
             18th css code
         </title>
-        <link rel="stylesheet"href="1 Animation.css">
+        <link rel="stylesheet"href="1size+color.css">
     </head>
     <body>
         <div>
