--- a/13.Ethforge.html
+++ b/13.Ethforge.html
@@ -45,8 +45,20 @@
         <br>
         <div class="footer">
             <div id="right">
-                <h3>$23.07M         |  130 +     |     68.82 X</h3>
-            </div>
+                <h3> 23.07M <h3>
+                <p id="pthree">Raised capital</p>
+                </div>
+
+                <div id="mid">
+                <h3>|130 +</h3>
+                <p id="pfour"> Launches</p>
+                </div>
+               
+                 <div id="last">
+                <h3>|68.82 X</h3>
+                <p id="pfive">Ath avg ROI</p>
+                 </div>
+               
         </div>
     </body>
 </html>
