--- a/14Altravo.html
+++ b/14Altravo.html
@@ -48,10 +48,43 @@
 
           </div>
         </div>
+       <br>
+       <br>
+       <br>
         <div class="footer">
+          <div id="leftf">
+           <p id="pf" >Catagories</p>
+          
           <p id="pthree"></p>
           <h2>FROM BOOTS TO TENTS<br>ALL IN ONE PLACE</h2>
+          </div>
           <p id="pfour">Every piece of gear should earn its place in <br>your pack. explore essentials built to perform.</p>
+        </div>
+        <div class="images">
+          <div id="img">
+            <img id="img1" src="travel1.jpeg">
+             <img src="travel.jpeg">
+             <img id="img3" src="travelll.jpeg">
+        </div>
+        <div class="lastpart">
+          <div id="last1">
+         <p id="pack">Bag Packs</p>
+         <p id="pr">280+ Products</p>
+         <button>View All</button>
+         </div>
+         
+          <div id="last2">
+         <p id="jack">Jackets</p>
+         <p id="pr">180+ Products</p>
+         <button>View All</button>
+         </div>
+         <div class="lastpart">
+          <div id="last3">
+         <pid="cap">Cap</p>
+         <p id="pr">80+ Products</p>
+         <button>View All</button>
+         </div>
+
         </div>
     </body>
 </html>
