--- a/15Dance.html
+++ b/15Dance.html
@@ -102,7 +102,7 @@
             WHY<br>CHOOSE US?
         </div>
         <div id="lastp">
-            EXPLORE CLASSES
+            <a>EXPLORE CLASSES</a>
         </div>
         </div>
        
